--- a/app/views/custom/Registration/signUp.scala.html
+++ b/app/views/custom/Registration/signUp.scala.html
@@ -4,60 +4,67 @@
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.inputFieldConstructor.f) }
 
-@securesocial.views.html.main( Messages("securesocial.signup.title") ) {
-    <div class="page-header">
-        <h1>@Messages("securesocial.signup.title")</h1>
-    </div>
+@main(Messages("securesocial.signup.title")){
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+                <div class="page-header">
+                    <h1>@Messages("securesocial.signup.title")</h1>
+                </div>
 
-    @request.flash.get("error").map { msg =>
-        <div class="alert alert-error">
-            @msg
-        </div>
-    }
+                @request.flash.get("error").map { msg =>
+                    <div class="alert alert-error">
+                        @msg
+                    </div>
+                }
+                <div class="col-xs-12 col-md-10 col-md-offset-1 login-form">
+                    <form action="@securesocial.core.providers.utils.RoutesHelper.handleSignUp(token).absoluteURL(IdentityProvider.sslEnabled)(request)"
+                          class="form-horizontal"
+                          autocomplete= "off"
+                          method="POST"
+                    >
+                        <fieldset>
+                            @if( UsernamePasswordProvider.withUserNameSupport ) {
+                                @helper.inputText(
+                                    signUpForm("userName"),
+                                    '_label -> Messages("securesocial.signup.username"),
+                                    'class -> "input-xlarge"
+                                )
+                            }
 
-    <form action="@securesocial.core.providers.utils.RoutesHelper.handleSignUp(token).absoluteURL(IdentityProvider.sslEnabled)(request)"
-          class="form-horizontal"
-          autocomplete= "off"
-          method="POST"
-    >
-        <fieldset>
-            @if( UsernamePasswordProvider.withUserNameSupport ) {
-                @helper.inputText(
-                    signUpForm("userName"),
-                    '_label -> Messages("securesocial.signup.username"),
-                    'class -> "input-xlarge"
-                )
-            }
+                            @helper.inputText(
+                                signUpForm("firstName"),
+                                '_label -> Messages("securesocial.signup.firstName"),
+                                'class -> "input-xlarge"
+                            )
 
-            @helper.inputText(
-                signUpForm("firstName"),
-                '_label -> Messages("securesocial.signup.firstName"),
-                'class -> "input-xlarge"
-            )
+                            @helper.inputText(
+                                signUpForm("lastName"),
+                                '_label -> Messages("securesocial.signup.lastName"),
+                                'class -> "input-xlarge"
+                            )
 
-            @helper.inputText(
-                signUpForm("lastName"),
-                '_label -> Messages("securesocial.signup.lastName"),
-                'class -> "input-xlarge"
-            )
+                            @helper.inputPassword(
+                                signUpForm("password.password1"),
+                                '_label -> Messages("securesocial.signup.password1"),
+                                'class -> "input-xlarge"
+                            )
 
-            @helper.inputPassword(
-                signUpForm("password.password1"),
-                '_label -> Messages("securesocial.signup.password1"),
-                'class -> "input-xlarge"
-            )
+                            @helper.inputPassword(
+                                signUpForm("password.password2"),
+                                '_label -> Messages("securesocial.signup.password2"),
+                                '_error -> signUpForm.error("password"),
+                                'class -> "input-xlarge"
+                            )
 
-            @helper.inputPassword(
-                signUpForm("password.password2"),
-                '_label -> Messages("securesocial.signup.password2"),
-                '_error -> signUpForm.error("password"),
-                'class -> "input-xlarge"
-            )
-
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">@Messages("securesocial.signup.createAccount")</button>
-                <a class="btn" href="@securesocial.core.providers.utils.RoutesHelper.login()">@Messages("securesocial.signup.cancel")</a>
+                            <div class="form-actions">
+                                <button type="submit" class="btn btn-primary">@Messages("securesocial.signup.createAccount")</button>
+                                <a class="btn" href="@securesocial.core.providers.utils.RoutesHelper.login()">@Messages("securesocial.signup.cancel")</a>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
-        </fieldset>
-    </form>
+        </div>
+    </div>
 }
