--- a/app/views/custom/Registration/startResetPassword.scala.html
+++ b/app/views/custom/Registration/startResetPassword.scala.html
@@ -3,34 +3,41 @@
 @import securesocial.core.IdentityProvider
 @implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.inputFieldConstructor.f) }
 
-@securesocial.views.html.main( Messages("securesocial.password.title") ) {
-    <div class="page-header">
-        <h1>@Messages("securesocial.password.title")</h1>
-    </div>
+@main(Messages("securesocial.password.title")){
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+                <div class="page-header">
+                    <h1>@Messages("securesocial.password.title")</h1>
+                </div>
 
-    @request.flash.get("error").map { msg =>
-    <div class="alert alert-error">
-        @Messages(msg)
-    </div>
-    }
+                @request.flash.get("error").map { msg =>
+                <div class="alert alert-error">
+                    @Messages(msg)
+                </div>
+                }
+                <div class="col-xs-12 col-md-10 col-md-offset-1 login-form">
+                    <form action="@securesocial.core.providers.utils.RoutesHelper.handleStartResetPassword().absoluteURL(IdentityProvider.sslEnabled)(request)"
+                          class="form-horizontal"
+                          autocomplete="off"
+                          method="POST"
+                    >
+                        <fieldset>
+                            @helper.inputText(
+                            startForm("email"),
+                            '_label -> Messages("securesocial.signup.email1"),
+                            'class -> "input-xlarge"
+                            )
 
-    <form action="@securesocial.core.providers.utils.RoutesHelper.handleStartResetPassword().absoluteURL(IdentityProvider.sslEnabled)(request)"
-          class="form-horizontal"
-          autocomplete="off"
-          method="POST"
-    >
-        <fieldset>
-            @helper.inputText(
-            startForm("email"),
-            '_label -> Messages("securesocial.signup.email1"),
-            'class -> "input-xlarge"
-            )
+                            <div class="form-actions">
+                                <button type="submit" class="btn btn-primary">@Messages("securesocial.password.reset")</button>
+                                <a class="btn" href="@securesocial.core.providers.utils.RoutesHelper.login()">@Messages("securesocial.signup.cancel")</a>
+                            </div>
 
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">@Messages("securesocial.password.reset")</button>
-                <a class="btn" href="@securesocial.core.providers.utils.RoutesHelper.login()">@Messages("securesocial.signup.cancel")</a>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
-
-        </fieldset>
-    </form>
+        </div>
+    </div>
 }
