--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -60,6 +60,8 @@
             </div>
 
         </div>
+        <div class="food-image-nav"><!-- no content --></div>
     </div>
     <div class="header-spacing"><!-- no content --></div>
 </header>
+
