--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -2,7 +2,7 @@
 
 @main(Messages("startpage.title")) {
 
-    <div id="carousel-startpage" class="carousel slide" data-ride="carousel" data-interval="4000">
+    <div id="carousel-startpage" class="carousel slide hidden" data-ride="carousel" data-interval="4000">
 
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -66,17 +66,17 @@
 
                 <div class="row margin-top">
                     <!-- Main intro -->
-                    <div class="col-xs-12 col-md-9">
+                    <div class="col-xs-12 col-md-6">
                         <h1>@Messages("startpage.main-content.header")</h1>
                         @Html(Messages("startpage.main-content.body"))
                     </div>
 
                     <!-- News -->
-                    <div class="col-xs-12 col-md-3">
+                    <div class="col-xs-12 col-md-6">
                         <aside>
                             <h2>@Messages("startpage.main-aside.header")</h2>
                             @Html(Messages("startpage.main-aside.body"))
-                            <iframe src="//player.vimeo.com/video/97540915?title=1&amp;byline=1&amp;portrait=1&amp;color=fafafa&amp;autoplay=0" width="100%" height="auto" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <iframe style="margin:0 auto; display:block;" src="//player.vimeo.com/video/97540915?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff&amp;autoplay=0" width="100%" height="259" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </aside>
                     </div>
                 </div>
