--- a/app/views/custom/notAuthorized.scala.html
+++ b/app/views/custom/notAuthorized.scala.html
@@ -3,7 +3,7 @@
         <h1>@Messages("securesocial.notAuthorized.title")</h1>
     </div>
 
-    <div class="alert alert-error">
+    <div class="alert alert-error animated fadeIn">
         @Messages("securesocial.notAuthorized.message")
     </div>
 }
