--- a/app/views/custom/passwordChange.scala.html
+++ b/app/views/custom/passwordChange.scala.html
@@ -13,13 +13,13 @@
                 </div>
 
                 @request.flash.get("error").map { msg =>
-                    <div class="alert alert-error">
+                    <div class="alert alert-error animated fadeIn">
                         @msg
                     </div>
                 }
 
                 @if( request.flash.get("success").isDefined ) {
-                    <div class="alert alert-info">
+                    <div class="alert alert-info animated fadeIn">
                         @request.flash.get("success").get
                     </div>
 
