--- a/app/views/host/index.scala.html
+++ b/app/views/host/index.scala.html
@@ -19,7 +19,7 @@
                     <div class="col-xs-12 col-md-6 big-margin-top">
                         <section>
                             <article>
-                                <h1>Alexandra</h1>
+                                <h1 class="page-header">Alexandra</h1>
                                 <h3>Art Director och entreprenör</h3>
                                 @shared.grade(inputId = "host-grade", initialValue = 1, size = "xs", showCaption = true)
                                 <div class="memberid"><p>MedlemsID: HDC2</p></div>
