--- a/app/views/contentcolumns/onecolumn.scala.html
+++ b/app/views/contentcolumns/onecolumn.scala.html
@@ -7,7 +7,7 @@
             <div class="col-xs-12 col-md-8 col-md-offset-1 col-xs-offset-0">
                 <div class="row">
                     <div class="col-xs-12 pull-right @if(menuList.isEmpty){col-md-12}else{col-md-9}">
-                        @if(!column1Header.isEmpty){ <h1>@column1Header</h1> }
+                        @if(!column1Header.isEmpty){ <h1 class="page-header">@column1Header</h1> }
                         @if(!column1Body.isEmpty){ <div class="content-body">@column1Body</div> }
                     </div>
                     @contentcolumns.columnitems.menu(asideHeader = menuHeader, asideMenu = menuList)
