--- a/app/views/custom/Registration/signUp.scala.html
+++ b/app/views/custom/Registration/signUp.scala.html
@@ -13,7 +13,7 @@
                 </div>
 
                 @request.flash.get("error").map { msg =>
-                    <div class="alert alert-error">
+                    <div class="alert alert-error animated fadeIn">
                         @msg
                     </div>
                 }
