--- a/app/views/custom/login.scala.html
+++ b/app/views/custom/login.scala.html
@@ -15,19 +15,19 @@
                 </div>
 
                 @errorMsg.map { msg =>
-                    <div class="alert alert-error">
+                    <div class="alert alert-error animated fadeIn">
                         @Messages(msg)
                     </div>
                 }
 
                 @request.flash.get("success").map { msg =>
-                    <div class="alert alert-info">
+                    <div class="alert alert-info animated fadeIn">
                         @msg
                     </div>
                 }
 
                 @request.flash.get("error").map { msg =>
-                    <div class="alert alert-error">
+                    <div class="alert alert-error animated fadeIn">
                         @msg
                     </div>
                 }
