--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -14,6 +14,7 @@
 @hdc-light-gray: #f9f9f9;
 @hdc-gold: #a48b74;
 @hdc-black: #000;
+@hdc-red: #8E0000;
 
 @host-level-01-color: @hdc-green;
 @host-level-02-color: @hdc-black;
@@ -189,6 +190,7 @@ label{
 }
 .help-block{
   display: inline-block;
+  color:@hdc-red;
 }
 
 
@@ -327,7 +329,7 @@ input[type="reset"]:hover
 }
 .header-spacing
 {
-  padding-bottom: 220px;
+  padding-bottom: 200px;
 }
 .food-image-nav {
   z-index:100;
