--- a/app/views/edit/index.scala.html
+++ b/app/views/edit/index.scala.html
@@ -1,11 +1,11 @@
 @()
 
-@mainedit(Messages("edit.content.title")) {
+@mainedit(Messages("edit.content.title")){
 
     <div class="row">
         <div class="col-xs-12">
-        <h1>@Messages("edit.index.title")</h1>
-        <p>@Messages("edit.index.body")</p>
+            <h1 class="page-header">@Messages("edit.index.title")</h1>
+            <p>@Messages("edit.index.body")</p>
         </div>
     </div>
 
