--- a/app/views/edit/listContentPages.scala.html
+++ b/app/views/edit/listContentPages.scala.html
@@ -1,15 +1,13 @@
 @(contentList: List[models.content.ContentPage])
 
-@mainedit(Messages("edit.content.title")) {
+@mainedit(Messages("edit.content.title")){
 
     <div class="row">
         <div class="col-xs-12">
-
         <h1 class="page-header">@Messages("edit.content.list.header")</h1>
+        <p><a href="@routes.ContentController.indexContentPages()" class="btn-primary">@Messages("edit.content.actions.add")</a></p>
 
-        <p><a href="@routes.ContentController.addContentIndex()" class="btn-primary">@Messages("edit.content.actions.add")</a></p>
-
-        <table class="table-striped table-hover table-bordered">
+        <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
                     <td>@Messages("edit.content.list.route")</td>
@@ -24,9 +22,9 @@
                     <td>@contentPage.route</td>
                     <td>@contentPage.name</td>
                     <td>
-                        <ul>
-                            <li><a href="@routes.ContentController.editContent(contentPage.id)">@Messages("edit.content.actions.edit")</a></li>
-                            <li><a href="@routes.ContentController.deleteContent(contentPage.id)">@Messages("edit.content.actions.delete")</a></li>
+                        <ul class="nav nav-pills">
+                            <li><a href="@routes.ContentController.editContentPage(contentPage.id)"><span class="glyphicon glyphicon-edit"></span>&nbsp;@Messages("edit.content.actions.edit")</a></li>
+                            <li><a href="@routes.ContentController.deleteContentPage(contentPage.id)"><span class="glyphicon glyphicon-trash"></span>&nbsp;@Messages("edit.content.actions.delete")</a></li>
                         </ul>
                     </td>
                 </tr>
