--- a/app/views/edit/listContentPages.scala.html
+++ b/app/views/edit/listContentPages.scala.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-xs-12">
         <h1 class="page-header">@Messages("edit.content.list.header")</h1>
-        <p><a href="@routes.ContentController.indexContentPages()" class="btn-primary">@Messages("edit.content.actions.add")</a></p>
+        <p><a href="@routes.ContentController.addContentPage()" class="btn-primary">@Messages("edit.content.actions.add")</a></p>
 
         <table class="table table-striped table-hover table-bordered">
             <thead>
