--- a/app/views/profile/editprofile.scala.html
+++ b/app/views/profile/editprofile.scala.html
@@ -8,6 +8,8 @@ http://www.playframework.com/documentation/2.2.x/ScalaForms
 
  -->
 
+  editprofile
+
 
 @if(userProfileForm.hasGlobalErrors) {
     <ul>
