--- a/app/views/profile/listofProfiles.scala.html
+++ b/app/views/profile/listofProfiles.scala.html
@@ -1,9 +1,9 @@
 @(userProfileList: List[models.UserProfileData])
 
 
-<h1>Visa alla Användarprofiler</h1>
+<h1>Show all profiles</h1>
 
-<a href="http://localhost:9000/profile/ny">Skapa ny profil</a>
+<a href="http://localhost:9000/profile/ny">Create</a>
 
 
 <dl class="userProfileElement">
