--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -313,6 +313,29 @@ input[type="reset"]:hover
   text-shadow:none;
 }
 
+// Likes
+.hdc-like
+{
+  font-weight: bold;
+  color: #fff;
+}
+.hdc-like-icon
+{
+  position: relative;
+  overflow: hidden;
+  display: block;
+  width:35px;
+  height:35px;
+  background-image:url('/assets/images/icons/hdc-like.png');
+  background-repeat: no-repeat;
+  background-position: 0px 0px;
+  background-size: 25%;
+}
+.hdc-like-icon
+{
+  color:@hdc-black;
+  background-position: 35px 0px;
+}
 
 
 
