--- a/app/views/edit/addContentPage.scala.html
+++ b/app/views/edit/addContentPage.scala.html
@@ -1,4 +1,4 @@
-@(contentForm: Form[models.content.formmodels.AddContentForm])(implicit flash: Flash)
+@(contentForm: Form[models.viewmodels.AddContentForm])(implicit flash: Flash)
 @import helper.twitterBootstrap._
 
 @mainedit(Messages("edit.content.title")){
