--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -18,7 +18,8 @@
                 <div class="navbar-static-top">
                     <a class="navbar-brand" href="#">@Messages("edit.menu.title")</a>
                     <ul class="nav navbar-nav">
-                        <li><a href="@routes.ContentController.indexContentPages()">@Messages("edit.menu.pages")&nbsp;<span class="glyphicon glyphicon-list"></span></a></li>
+                        <li><a href="@routes.ContentController.indexContentPages()">@Messages("edit.menu.pages")&nbsp;<span class="glyphicon glyphicon-th-list"></span></a></li>
+                        <li><a href="@routes.RecipeController.indexRecipe()">@Messages("edit.menu.recipe")&nbsp;<span class="glyphicon glyphicon-leaf"></span></a></li>
                         <li><a href="#">@Messages("edit.menu.users")&nbsp;<span class="glyphicon glyphicon-user"></span></a></li>
                         <li><a href="#">@Messages("edit.menu.files")&nbsp;<span class="glyphicon glyphicon-file"></span></a></li>
                         <li><a href="@routes.StartPageController.index()">@Messages("edit.menu.backtosite")&nbsp;<span class="glyphicon glyphicon-globe"></span></a></li>
