Some fixes and cleaning up comments. Added multiplecheckboxes without connection to profile and without storing it in neo4jn

--- a/app/views/profile/createUserProfile.scala.html
+++ b/app/views/profile/createUserProfile.scala.html
@@ -86,7 +86,7 @@ Värd?
 Jag är bra på:
 @for(t <- element) {
     <br>
-    <input type="checkbox" id="@t.name" name="quality" value="@t.key">
+    <input type="checkbox" id="@t.name" name="@t.v" value="@t.name">
         @t.name
     </input>
 }
