--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -7,6 +7,7 @@
 @for(t <- element) {
 <br>
 
+    <!-- checkbox -->
 <input type="checkbox" id="@t.name" name="@t.v" value="@t.name" @klass.getString(t.name)>
 @t.name
 </input>
