--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -34,6 +34,6 @@
         @*TODO - Create controllers with local backups, also bundle *@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
-        <script src="@routes.Assets.at("javascripts/site.js")"></script>
+        <script src="@routes.Assets.at("js/site.js")"></script>
     </body>
 </html>
