--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -1,4 +1,4 @@
-@(menuItems: Seq[(String, String, Call, String)])
+@(menuItems: Seq[(String, String, Call, String)], quicklinkItems: Seq[(String, String, Call, String, String)])
 <header>
     <div class="navbar-fixed-top">
         <div class="container-fluid">
@@ -7,8 +7,12 @@
                     <a href="@routes.StartPageController.index()">@shared.img("images/general/logo-horizontal.png", alt = Messages("header.logo.alt"), cssClass = "logo-img img-responsive")</a>
                     <div class="quicklinks">
                         <ul class="nav nav-pills">
-                            <li><a href="@routes.HostController.index()">@Messages("header.link.host-profile")</a></li>
-                            <li><a href="#">@Messages("header.link.inbox") <span class="badge">42</span></a></li>
+                            @for(nav <- quicklinkItems) {
+                                <li><a class="@nav._4" href="@nav._3" title="@nav._2">@nav._1 @Html(nav._5)</a></li>
+                            }
+
+                            @{/* Disabled for now
+
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                                     @Messages("header.link.login")<span class="caret"></span>
@@ -30,8 +34,9 @@
                                         </form>
                                     </div>
                                 </div>
-
                             </li>
+                            */}
+
                             <li class="visible-xs">
                                 <button class="navbar-toggle navbar-toggle-custom" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse" title="@Messages("header.mobile-menu.title")">
                                     <span class="sr-only">@Messages("header.mobile-menu.title")</span>
