--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -24,25 +24,8 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
         @*<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>*@
-        <script src="@routes.Assets.at("javascripts/jquery.gray.min.js")"></script>
-        <script src="@routes.Assets.at("javascripts/star-rating.min.js")"></script>
-        <script src="@routes.Assets.at("javascripts/site.js")"></script>
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-52171001-1', 'hdc-web.herokuapp.com');
-        ga('send', 'pageview');
-
-        </script>
-        <script>(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/sv_SE/sdk.js#xfbml=1&appId=481898671955836&version=v2.0";
-        fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
+        <script src="@routes.Assets.at("js/jquery.gray.min.js")"></script>
+        <script src="@routes.Assets.at("js/star-rating.min.js")"></script>
+        <script src="@routes.Assets.at("js/site.js")"></script>
     </body>
 </html>
