Moved Fileupload to Edit-mode Improved file upload Delete, still work in progress

--- a/app/views/edit/listContentPages.scala.html
+++ b/app/views/edit/listContentPages.scala.html
@@ -10,9 +10,9 @@
         <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
-                    <td>@Messages("edit.content.list.route")</td>
-                    <td>@Messages("edit.content.list.name")</td>
-                    <td>@Messages("edit.content.list.action")</td>
+                    <th>@Messages("edit.content.list.route")</th>
+                    <th>@Messages("edit.content.list.name")</th>
+                    <th>@Messages("edit.content.list.action")</th>
                 </tr>
             </thead>
 
