--- a/app/views/edit/listRecipes.scala.html
+++ b/app/views/edit/listRecipes.scala.html
@@ -10,8 +10,8 @@
         <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
-                    <td>@Messages("edit.recipe.list.name")</td>
-                    <td>@Messages("edit.recipe.list.action")</td>
+                    <th>@Messages("edit.recipe.list.name")</th>
+                    <th>@Messages("edit.recipe.list.action")</th>
                 </tr>
             </thead>
 
