--- a/app/views/edit/listContentPages.scala.html
+++ b/app/views/edit/listContentPages.scala.html
@@ -10,6 +10,7 @@
         <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
+                    <th>@Messages("edit.content.list.created_date")</th>
                     <th>@Messages("edit.content.list.route")</th>
                     <th>@Messages("edit.content.list.name")</th>
                     <th>@Messages("edit.content.list.action")</th>
