--- a/app/views/shared/hostImageCircle.scala.html
+++ b/app/views/shared/hostImageCircle.scala.html
@@ -1,2 +1,2 @@
-@(cssClass: String = "")
-<div class="img-circle grayscale grayscale-fade host-image @cssClass" style="background-image:url('@routes.Assets.at("images/host/host-head-medium.jpg")')"></div>
+@(imagePath: String = "", cssClass: String = "")
+<div class="img-circle grayscale grayscale-fade host-image @cssClass" style="background-image:url('@imagePath')"></div>
