--- a/app/views/worlds/index.scala.html
+++ b/app/views/worlds/index.scala.html
@@ -4,7 +4,7 @@
 
     <ul>
     @for(world <- worlds) {
-        <li>WorldID: @world.id<br>
+        <li>WorldID: @world.objectId<br>
             World name: @world.name<br>
             Spoken languages: @world.spokenLanguage<br>
             Nr of moons: @world.moons<br>
