--- a/app/views/edit/file/imagelist.scala.html
+++ b/app/views/edit/file/imagelist.scala.html
@@ -1,4 +1,4 @@
-@(images: List[models.files.ImageFile] = Nil)
+@(images: List[models.files.ContentFile] = Nil)
 
 @if(!images.isEmpty){
     <table class="table table-striped table-hover table-bordered">
@@ -35,7 +35,7 @@
                     </ul>
                 }
                 </td>
-                <td><a href="@routes.FileController.deleteImage(image.contentFileId)">@Messages("file.list.delete")</a></td>
+                <td><a href="@routes.FileController.deleteImage(image.objectId)">@Messages("file.list.delete")</a></td>
             </tr>
         }
         </tbody>
