--- a/app/views/edit/listContentPages.scala.html
+++ b/app/views/edit/listContentPages.scala.html
@@ -24,8 +24,8 @@
                     <td>@contentPage.name</td>
                     <td>
                         <ul class="nav nav-pills">
-                            <li><a href="@routes.ContentController.editContentPage(contentPage.id)"><span class="glyphicon glyphicon-edit"></span>&nbsp;@Messages("edit.content.actions.edit")</a></li>
-                            <li><a href="@routes.ContentController.deleteContentPage(contentPage.id)"><span class="glyphicon glyphicon-trash"></span>&nbsp;@Messages("edit.content.actions.delete")</a></li>
+                            <li><a href="@routes.ContentController.editContentPage(contentPage.objectId)"><span class="glyphicon glyphicon-edit"></span>&nbsp;@Messages("edit.content.actions.edit")</a></li>
+                            <li><a href="@routes.ContentController.deleteContentPage(contentPage.objectId)"><span class="glyphicon glyphicon-trash"></span>&nbsp;@Messages("edit.content.actions.delete")</a></li>
                         </ul>
                     </td>
                 </tr>
